tests/language_modules/06_arrays/invalid_semantics/array_length_mismatch.vf
module ArrayLengthMismatch

procedure main()
is
    let values: Array<Integer, 3> = [1, 2]
    check true
end main

end ArrayLengthMismatch